adding extra memory to surefire configuration, to get tests to pass