@@ -221,6 +221,17 @@
                     <artifactId>gem-maven-plugin</artifactId>
                     <version>0.28.6</version>
                 </plugin>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-surefire-plugin</artifactId>
+                    <version>2.5</version>
+                    <configuration>
+                        <includes>
+                            <include>**/*Test.java</include>
+                        </includes>
+                        <argLine>-Duser.language=en -Duser.region=US -Xmx512m -XX:MaxPermSize=512m</argLine>
+                    </configuration>
+                </plugin>
 			</plugins>
 		</pluginManagement>
 	</build>
